<resources>
    <string name="app_name">Freewilder</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_with">Login with</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="email">Email</string>
    <string name="login"> Login</string>

    <string name="by_tapping_login_with_facebook_sign_up_i_agree_to">By Tapping Login with Facebook,Sign Up,I agree to
    </string>
    <string name="freewilders">Freewilder\'s</string>
    <string name="terms_of_service">Terms of service,</string>
    <string name="payments_terms_of_service">Payments Terms of service,</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_search">Search</string>
    <string name="menu_collection">Collection</string>
    <string name="menu_message">Message</string>
    <string name="menu_sidemenu">SideMenu</string>
    <string name="for_you">For You</string>
    <string name="filter">Filter</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email_password"><![CDATA[Email & Password]]></string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_birthday">Birthday</string>
    <string name="sign_up_next">Next</string>
    <string name="finishing_signing_up">Finishing Signing Up</string>
    <string name="finishing_signing_up_details">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="sign_up_contact">Contact</string>
    <string name="sign_up_contact_details">Contrary to popular belief,Lorem lpsum is not simply random text.It has roots in a piece of classical Latin literature from 45 bc,making it over 2000 years old.Richard McClintock,a Latin professor at Hampden-Sydney College in Virginia looked</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_terms_privacy"><![CDATA[Terms & Privacy]]></string>
    <string name="sign_up_verify">Verify</string>
    <string name="account_activation_signup">Account Activation</string>
    <string name="sign_up_account_activation_details"><![CDATA[Please check your email we have send you activation code,please put the code bellow the box & continue]]></string>
    <string name="sign_up_whats_your_birthday">What\'s Your Birthday?</string>
    <string name="sign_up_pick_your_date">Pick your date</string>
    <string name="sign_up_please_enter_your_email_and_provide_your_password">Please enter your email and provide your Password</string>
    <string name="sign_up_whats_your_email_and_password"><![CDATA[What\'s Your Email &amp; Password?]]></string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_male">Male</string>
    <string name="sign_up_female">Female</string>
    <string name="sign_up_please_provide_your_gender">Please provide your gender</string>
    <string name="sign_up_whats_your_gender">What\'s Your Gender?</string>
    <string name="sign_up_whats_your_name">What\'s Your Name?</string>
    <string name="sign_up_please_enter_first_and_last_name">Please enter first and last name</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="invite_new_friend">Invite New Friend</string>
    <string name="invite_send_invite">Send Invite</string>
    <string name="invite_friend_email">Email</string>
    <string name="invite_alert_filter">Share your love of freedom</string>
    <string name="need_to_contact_permission_for_this_app">Need To Contact Permission for This App</string>
    <string name="read_contact_permission_available">Read Contact Permission Available</string>
    <string name="ok">OK</string>
    <string name="chose_contacts">Choose Contacts</string>
    <string name="please_choose_male_or_female_at_least">Please Choose male or female at least</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_personal_fragment_about_me">About Me</string>
    <string name="profile_personal_fragment_school">School</string>
    <string name="profile_personal_fragment_work">Work</string>
    <string name="profile_personal_fragment_language">Language</string>
    <string name="profile_personal_fragment_verified">Verified</string>
    <string name="profile_description">Lorem Ipsum</string>
    <string name="profile_name">John Doe</string>
    <string name="profile_personal">Personal</string>
    <string name="profile_service">Service</string>


    <string name="profile_map">Map     </string>
    <string name="profile_video">Video   </string>
    <string name="profile_reviews">Reviews  </string>
    <string name="filter_reset_all">Reset All</string>
    <string name="search_filter_choose_category">Choose Category</string>
    <string name="search_filter_choose_keywords">Choose Keywords</string>
    <string name="search_filter_amenities">Amenities (+4)</string>
    <string name="search_filter_price_range">Price range</string>
    <string name="search_filter_apply_filter">Apply Filter</string>
    <string name="filter_search_any_date">Any Date</string>
    <string name="search_filter_amenities_title">Amenities</string>
    <string name="search_filter_category_title">Category</string>
    <string name="search_with_new_location">Search with New Location</string>
    <string name="location">Location</string>
    <string name="near_by">Near by</string>
    <string name="location_name">Location Name</string>
    <string name="search_from_history">Search from History</string>
    <string name="search_history">Search History</string>

</resources>
