<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_dashboard"
        android:title="@string/menu_dashboard"
        android:icon="@mipmap/ic_launcher" />

    <item android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@mipmap/ic_launcher"
       />

    <item android:id="@+id/action_collection"
        android:title="@string/menu_collection"
        android:icon="@mipmap/ic_launcher" />

    <item android:id="@+id/action_message"
        android:title="@string/menu_message"
        android:icon="@mipmap/ic_launcher"
        />
    <item android:id="@+id/action_sidemenu"
        android:title="@string/menu_sidemenu"
        android:icon="@mipmap/ic_launcher" />

</menu>