<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_finishing_signup"
            android:layout_centerHorizontal="true"
            android:text="@string/finishing_signing_up"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_finishing_signup_details"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:layout_below="@+id/tv_finishing_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishing_signing_up_details"/>


        <TextView
            android:id="@+id/tv_contact"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_finishing_signup_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_contact"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tv_contact_details"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:layout_below="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_contact_details"/>

        <View
            android:layout_marginTop="80dp"
            android:layout_below="@+id/tv_contact_details"
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />


        <TextView
            android:layout_below="@+id/view"
            android:id="@+id/tv_sign_up"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"/>




    </RelativeLayout>
</ScrollView>
