<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_whats_your_email_and_password"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sign_up_please_enter_your_email_and_provide_your_password"/>


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_email"
            app:hintTextAppearance="@style/GreenTextInputLayout"
            >

            <android.support.v7.widget.AppCompatEditText
                android:nextFocusDown="@+id/input_password"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/sign_up_email"
                android:paddingLeft="10dp"
                android:theme="@style/MyEditText"
                />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_password"
            app:hintTextAppearance="@style/GreenTextInputLayout"
            >

            <android.support.v7.widget.AppCompatEditText
                android:nextFocusDown="@+id/input_confirm_password"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/sign_up_password"
                android:paddingLeft="10dp"
                android:theme="@style/MyEditText"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_confirm_password"
            app:hintTextAppearance="@style/GreenTextInputLayout"
            >

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/sign_up_confirm_password"
                android:paddingLeft="10dp"
                android:theme="@style/MyEditText"
                />
        </android.support.design.widget.TextInputLayout>





        <TextView
            android:id="@+id/tv_next"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/sign_up_next"
            android:textSize="20sp"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</ScrollView>
