<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_whats_your_birthday"
            android:textSize="22sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sign_up_pick_your_date"/>


        <DatePicker
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"></DatePicker>


        <TextView
            android:id="@+id/tv_next"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/sign_up_next"
            android:textSize="20sp"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</ScrollView>
