<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">


    <RelativeLayout
        android:id="@+id/RLFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_facebook_logo" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with"
                android:textColor="@color/colorBlue"
                android:textSize="16sp" />


            <TextView
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

    <ImageView
        android:src="@drawable/logo_new"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_above="@+id/RLFacebookLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/LLEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/RLFacebookLogin"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/linear_customborder"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <TextView
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/LLNormalLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/LLEmailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:layout_marginLeft="2dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <WebView
        android:layout_below="@+id/LLNormalLogin"
        android:id="@+id/LocalWeb"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content"></WebView>


</RelativeLayout>