<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_marginTop="24dp"
        android:id="@+id/LLToolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorToolbarGray"
        >
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:padding="17dp"
            android:src="@drawable/ic_left_arrow"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/tv_toolText"
            android:text="@string/search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>



    <TextView
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_with_new_location"/>

    <android.support.v7.widget.CardView
       android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="3dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <ImageView
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_search_placeholder_green"
                android:layout_gravity="center_vertical"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="3dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/near_by"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_name"
                    android:textSize="12sp"/>

            </LinearLayout>

            <ImageView
                android:src="@drawable/ic_search_navigation"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="20dp"
                android:layout_height="20dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/search_from_history"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_search_history"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

    </android.support.v7.widget.RecyclerView>






</LinearLayout>